# pd_mlp_dsp

./: CMakeLists.txt
include/: idsp_addons.hpp  mlp.hpp  mlp.tpp  mlp_tanh.hpp  mlp_tanh.tpp  sl_mlp_2_dsp.hpp
src/: mlp_tanh.cpp  sl_mlp_2_dsp.cpp
